[package]
name = "vita-wasm"
version = "0.1.0"
authors = ["Travers <traversbiddle@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.51"

[profile.release]
lto = true
opt-level = 's'
# opt-level = 'z' # To even more aggressively optimize for size, at further potential speed costs
